# aoc2022

./: .ocamlformat  README.md  aoc2022.opam  aoc2022.opam.template  dune  dune-project  readme.ml
day01/: day01.ml  dune
day02/: day02.ml  dune
day03/: day03.ml  dune
day04/: day04.ml  dune
day05/: day05.ml  dune  p1.expected  p2.expected
day06/: day06.ml  dune
day07/: dune  lib.ml  p1.expected  p2.expected
day08/: day08.ml  dune
day09/: day09.ml  dune
day10/: day10.ml  dune
day11/: day11.ml  dune  p2.expected
day12/: day12.ml  dune
day13/: day13.ml  dune
day14/: day14.ml  dune
day15/: day15.ml  dune  p1.expected  p2.expected
day16/: day16.ml  dune
day17/: day17.ml  dune  p2.expected
day18/: day18.ml  dune
day19/: day19.ml  dune
day20/: day20.ml  dune  p2.expected
day21/: day21.ml  dune  p1.expected  p2.expected
day22/: day22.ml  dune
day23/: day23.ml  dune
day24/: day24.ml  dune
