(library
 (name day18)
 (public_name aoc2022.day18)
 (modules day18)
 (libraries base stdio angstrom)
 (preprocess
  (pps ppx_jane))
 (inline_tests))

(executable
 (name run)
 (modules run)
 (libraries day18))

(rule
 (write-file run.ml "let () = Day18.main ()"))

(rule
 (write-file day18.mli "val main : unit -> unit"))

(rule
 (with-stdout-to
  p1.out
  (run ./run.exe %{dep:input.txt})))

(rule
 (with-stdout-to
  p2.out
  (run ./run.exe --2 %{dep:input.txt})))

(rule
 (alias runtest)
 (action
  (diff p1.expected p1.out)))

(rule
 (alias runtest)
 (action
  (diff p2.expected p2.out)))
